# TeamSuccessRobotex2018Taxify

./: LICENSE  README.md  WindowsProject1.sln  a.out  main.cpp  robotex-depos.csv
Passengers_file/: Class.cpp  ClassDiagram.cd  Passengers_file.cpp  Passengers_file.vcxproj  compile_line.txt  main.cpp  visual_side.cpp
Passengers_file/Debug/: Passengers_file.pch
Passengers_file/Release/: Master_code.sbr  Passengers_file.pch  defines_h.sbr
add_passengers_to_map_graph/: a.out  data_types.h  depos2.hpp  intersect_check.cpp  passenger_reader.cpp  test_main.cpp
combine_depos_to_map_graph/: README.md  a.out  data_types.h  depos.hpp  depos2.hpp  depos_header.h  depos_header.h.gch  geodesic.cpp  main.cpp  main2.cpp  map_to_graph.cpp  map_to_graph_2.cpp  map_to_graph_3.cpp  output.kml  qtree.cpp  qtree_2.cpp  qtree_3.cpp  util_functions.hpp  util_functions.hpp.gch  vincenty.cpp  vincety.cpp
depos_file/: README.md  depos_header.h  robotex-depos.csv
osmium_file/: CMakeLists.txt  a.out  main.cpp  main2.cpp  main3.cpp  util_functions.hpp.gch
passengers_file_1/: .~lock.robotex2.csv#  Passengers_file.cpp  README.md  main.cpp  passenger_info.h
passengers_file_1/depos_file/: depos.cpp
util_functions/: a_star.cpp  data_types.h
v_0_1/: RamCurrentlyUsed.cpp
v_0_1/Passengers_file/: Header.h.gch  Mastercode.cpp  Passengers_file.cpp  Passengers_file.vcxproj.filters  main.cpp  passenger_info.h  stdafx.cpp  stdafx.h.gch  targetver.h.gch
v_0_1/a_star_test/: a.out  passenger_adder.cpp  passenger_reader.cpp  test1.cpp
v_0_1/depos_file/: a.out  (+3 more)
v_0_2/: README.md
(+142 files in other folders)
